--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jimp": "^0.5.6",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth2": "^0.1.6",
-    "passport-local": "^1.0.0",
     "mime": "^2.3.1",
     "mongoose": "^4.13.14",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth2": "^0.1.6",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
+    "pusher": "^2.2.0",
     "request": "^2.88.0",
     "slug": "^0.9.1"
   }
