changes to available orders proximity

--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "firebase-admin": "^8.8.0",
+    "firebase-admin": "^8.12.1",
+    "geolib": "^3.2.1",
     "http-errors": "~1.6.2",
     "jimp": "^0.5.6",
-    "mime": "^2.3.1",
-    "mongoose": "^4.13.14",
+    "mime": "^2.4.5",
+    "mongoose": "^4.13.20",
     "morgan": "~1.9.0",
-    "multer": "^1.4.1",
+    "multer": "^1.4.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "pusher": "^2.2.0",
-    "request": "^2.88.0",
+    "pusher": "^2.2.2",
+    "request": "^2.88.2",
     "slug": "^0.9.1"
   }
 }
