--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "firebase-admin": "^8.12.1",
     "geolib": "^3.2.1",
     "http-errors": "~1.6.2",
-    "jimp": "^0.5.6",
+    "jimp": "^0.12.0",
     "mime": "^2.4.5",
     "mongoose": "^4.13.20",
+    "mongoose-timezone": "^1.3.0",
     "morgan": "~1.9.0",
     "multer": "^1.4.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
+    "pug": "^2.0.4",
     "pusher": "^2.2.2",
     "request": "^2.88.2",
     "slug": "^0.9.1"
